Updated text in all language json files

--- a/static/languages/bg.json
+++ b/static/languages/bg.json
@@ -1,7 +1,7 @@
 {
-  "heading": "Колко висок е въглеродният отпечатък от производството на електроенергия във всички страни от ЕС?",
-  "subheading": "Към 2022 г. в ЕС27 интензитетът на емисиите на парникови газове (GHG) в еквивалент на въглероден диоксид на киловатчас е 258. Това е увеличение от 13,65% спрямо 2020 г.",
-  "legend1": "Няма данни",
+  "heading": "Какъв е въглеродният отпечатък от производството на електроенергия в ЕС?",
+  "subheading": "През 2023 г. в Европейския съюз количеството емисии на парникови газове за киловатчас произведена електроенергия е 210 gCO2e/kWh. Това представлява 17% намаление в сравнение с 2022 г. (258 gCO2e/kWh).",
+  "legend1": "Няма налични данни",
   "tooltip1": "g CO2e/kW h",
   "textSourceDescription": "Източник",
   "textSource": "ЕИП: https://www.eea.europa.eu/",
