--- a/static/languages/cs.json
+++ b/static/languages/cs.json
@@ -1,6 +1,6 @@
 {
-  "heading": "Jak vysoká je uhlíková stopa výroby elektřiny ve všech zemích EU?",
-  "subheading": "Od roku 2022 byla v EU27 intenzita emisí skleníkových plynů (GHG) v ekvivalentu oxidu uhličitého na kilowatthodinu 258. To je nárůst o 13,65 % do roku 2020.",
+  "heading": "Jaká je uhlíková stopa výroby elektřiny v EU?",
+  "subheading": "V roce 2023 bylo v Evropské unii množství emisí skleníkových plynů na kilowatthodinu vyrobené elektřiny 210 gCO2e/kWh. To představuje 17% snížení ve srovnání s rokem 2022 (258 g CO2e/kWh).",
   "legend1": "Nejsou k dispozici žádné údaje",
   "tooltip1": "g CO2e/kW h",
   "textSourceDescription": "Zdroj",
