--- a/static/languages/de.json
+++ b/static/languages/de.json
@@ -1,6 +1,6 @@
 {
-  "heading": "Wie hoch ist der CO2-Fußabdruck der Stromerzeugung in allen EU-Ländern?",
-  "subheading": "Ab 2022 betrug die Treibhausgasemissionsintensität (THG) in Kohlendioxidäquivalenten pro Kilowattstunde in der EU27 258. Dies ist ein Anstieg von 13,65 % gegenüber 2020.",
+  "heading": "Wie hoch ist der CO2-Fußabdruck der Stromerzeugung in der EU?",
+  "subheading": "Im Jahr 2023 betrugen die Treibhausgasemissionen pro erzeugter Kilowattstunde Strom in der Europäischen Union 210 gCO2e/kWh. Dies entspricht einer Reduzierung um 17 % im Vergleich zum Jahr 2022 (258 gCO2e/kWh).",
   "legend1": "Keine Daten verfügbar",
   "tooltip1": "g CO2e/kWh",
   "textSourceDescription": "Quelle",
