--- a/static/languages/el.json
+++ b/static/languages/el.json
@@ -1,11 +1,11 @@
 {
-  "heading": "Πόσο υψηλό είναι το αποτύπωμα άνθρακα της παραγωγής ηλεκτρικής ενέργειας σε όλες τις χώρες της ΕΕ;",
-  "subheading": "Από το 2022 στην ΕΕ των 27 η ένταση εκπομπών αερίων θερμοκηπίου (GHG) σε ισοδύναμο διοξειδίου του άνθρακα ανά κιλοβατώρα ήταν 258. Πρόκειται για αύξηση 13,65% έως το 2020.",
+  "heading": "Ποιο είναι το αποτύπωμα άνθρακα της παραγωγής ηλεκτρικής ενέργειας στην ΕΕ;",
+  "subheading": "Το 2023, στην Ευρωπαϊκή Ένωση, το ποσό των εκπομπών αερίων θερμοκηπίου ανά κιλοβατώρα παραγόμενης ηλεκτρικής ενέργειας ήταν 210 gCO2e/kWh. Αυτό αντιπροσωπεύει μείωση 17% σε σύγκριση με το 2022 (258 gCO2e/kWh).",
   "legend1": "Δεν υπάρχουν διαθέσιμα δεδομένα",
   "tooltip1": "g CO2e/kW h",
   "textSourceDescription": "Πηγή",
   "textSource": "ΕΟΧ: https://www.eea.europa.eu/",
-  "textNoteDescription": "Σημείωση",
+  "textNoteDescription": "Σημείωμα",
   "textNote": "Ευρωπαϊκός Οργανισμός Περιβάλλοντος",
   "textDataAccess": "Πρόσβαση στα δεδομένα",
   "linkDataAccess": "https://www.eea.europa.eu/en/analysis/indicators/greenhouse-gas-emission-intensity-of-1?activeAccordion=ecdb3bcf-bbe9-4978-b5cf-0b136399d9f8",
