--- a/static/languages/et.json
+++ b/static/languages/et.json
@@ -1,11 +1,11 @@
 {
-  "heading": "Kui suur on elektritootmise süsiniku jalajälg kõigis ELi riikides?",
-  "subheading": "2022. aasta seisuga oli EL27-s kasvuhoonegaaside heitkoguste (KHG) intensiivsus süsinikdioksiidi ekvivalendis kilovatt-tunni kohta 258. See on 2020. aastani 13,65% tõus.",
+  "heading": "Kui suur on ELi elektritootmise süsiniku jalajälg?",
+  "subheading": "2023. aastal oli Euroopa Liidus kasvuhoonegaaside heitkogus toodetud elektrienergia kilovatt-tunni kohta 210 gCO2e/kWh. Võrreldes 2022. aastaga (258 gCO2e/kWh) on see 17% väiksem.",
   "legend1": "Andmed puuduvad",
   "tooltip1": "g CO2e/kW h",
   "textSourceDescription": "Allikas",
   "textSource": "EMP: https://www.eea.europa.eu/",
-  "textNoteDescription": "Märge",
+  "textNoteDescription": "Märkus",
   "textNote": "Euroopa Keskkonnaagentuur",
   "textDataAccess": "Juurdepääs andmetele",
   "linkDataAccess": "https://www.eea.europa.eu/en/analysis/indicators/greenhouse-gas-emission-intensity-of-1?activeAccordion=ecdb3bcf-bbe9-4978-b5cf-0b136399d9f8",
