--- a/static/languages/fi.json
+++ b/static/languages/fi.json
@@ -1,11 +1,11 @@
 {
-  "heading": "Kuinka suuri on sähköntuotannon hiilijalanjälki kaikissa EU-maissa?",
-  "subheading": "Vuodesta 2022 lähtien EU27:n kasvihuonekaasupäästöjen (GHG) intensiteetti hiilidioksidiekvivalentteina kilowattituntia kohden oli 258. Tämä on 13,65 % kasvua vuoteen 2020 mennessä.",
+  "heading": "Mikä on sähköntuotannon hiilijalanjälki EU:ssa?",
+  "subheading": "Vuonna 2023 Euroopan unionissa kasvihuonekaasupäästöjen määrä tuotettua sähkön kilowattituntia kohden oli 210 gCO2e/kWh. Tämä on 17 % vähemmän kuin vuonna 2022 (258 gCO2e/kWh).",
   "legend1": "Tietoja ei ole saatavilla",
   "tooltip1": "g CO2e/kW h",
   "textSourceDescription": "Lähde",
   "textSource": "ETA: https://www.eea.europa.eu/",
-  "textNoteDescription": "Huomautus",
+  "textNoteDescription": "Huom",
   "textNote": "Euroopan ympäristökeskus",
   "textDataAccess": "Käytä tietoja",
   "linkDataAccess": "https://www.eea.europa.eu/en/analysis/indicators/greenhouse-gas-emission-intensity-of-1?activeAccordion=ecdb3bcf-bbe9-4978-b5cf-0b136399d9f8",
