--- a/static/languages/fr.json
+++ b/static/languages/fr.json
@@ -1,10 +1,10 @@
 {
-  "heading": "Quelle est l’empreinte carbone de la production d’électricité dans tous les pays de l’UE ?",
-  "subheading": "En 2022, dans l’UE27, l’intensité des émissions de gaz à effet de serre (GES) en équivalent dioxyde de carbone par kilowattheure était de 258. Cela représente une augmentation de 13,65 % par rapport à 2020.",
-  "legend1": "Pas de données disponibles",
-  "tooltip1": "g CO2e/kWh",
+  "heading": "Quelle est l’empreinte carbone de la production d’électricité dans l’UE ?",
+  "subheading": "En 2023, dans l’Union européenne, la quantité d’émissions de gaz à effet de serre par kilowattheure d’électricité produite était de 210 gCO2e/kWh. Cela représente une réduction de 17 % par rapport à 2022 (258 gCO2e/kWh).",
+  "legend1": "Aucune donnée disponible",
+  "tooltip1": "g CO2e/kW·h",
   "textSourceDescription": "Source",
-  "textSource": "EEE : https://www.eea.europa.eu/",
+  "textSource": "EEE : https://www.eea.europa.eu/",
   "textNoteDescription": "Note",
   "textNote": "Agence européenne pour l'environnement",
   "textDataAccess": "Accéder aux données",
