--- a/static/languages/ga.json
+++ b/static/languages/ga.json
@@ -1,6 +1,6 @@
 {
-  "heading": "Cé chomh hard is atá lorg carbóin giniúna leictreachais i ngach tír san AE?",
-  "subheading": "Amhail ó 2022 san AE27 ba é 258 an déine astaíochta gáis cheaptha teasa (GHG) i gcoibhéis dé-ocsaíd charbóin in aghaidh na cileavata uair an chloig. Sin méadú 13.65% go dtí 2020.",
+  "heading": "Cad é an lorg carbóin de tháirgeadh leictreachais san AE?",
+  "subheading": "In 2023, san Aontas Eorpach, ba é 210 gCO2e/kWh méid na n-astaíochtaí gás ceaptha teasa in aghaidh na cileavatuaire de leictreachas a tháirgtear. Is ionann é seo agus laghdú 17% i gcomparáid le 2022 (258 gCO2e/kWh).",
   "legend1": "Níl aon sonraí ar fáil",
   "tooltip1": "g CO2e/kW h",
   "textSourceDescription": "Foinse",
