--- a/static/languages/hu.json
+++ b/static/languages/hu.json
@@ -1,11 +1,11 @@
 {
-  "heading": "Milyen magas a villamosenergia-termelés szénlábnyoma az EU összes országában?",
-  "subheading": "2022-ben az EU-27-ben az üvegházhatású gázok kibocsátásának (ÜHG) intenzitása szén-dioxid-egyenértékben kilowattóránként 258 volt. Ez 13,65%-os növekedést jelent 2020-hoz képest.",
-  "legend1": "Nincs elérhető adat",
+  "heading": "Mekkora a villamosenergia-termelés szénlábnyoma az EU-ban?",
+  "subheading": "2023-ban az Európai Unióban 210 gCO2e/kWh volt az üvegházhatást okozó gázok kibocsátása egy kilowattórára megtermelt villamos energiára. Ez 17%-os csökkenést jelent 2022-hez képest (258 gCO2e/kWh).",
+  "legend1": "Nincs adat",
   "tooltip1": "g CO2e/kW h",
   "textSourceDescription": "Forrás",
   "textSource": "EGT: https://www.eea.europa.eu/",
-  "textNoteDescription": "jegyzet",
+  "textNoteDescription": "Jegyzet",
   "textNote": "Európai Környezetvédelmi Ügynökség",
   "textDataAccess": "Hozzáférés az adatokhoz",
   "linkDataAccess": "https://www.eea.europa.eu/en/analysis/indicators/greenhouse-gas-emission-intensity-of-1?activeAccordion=ecdb3bcf-bbe9-4978-b5cf-0b136399d9f8",
