--- a/static/languages/it.json
+++ b/static/languages/it.json
@@ -1,13 +1,13 @@
 {
-  "heading": "Qual è l’impronta di carbonio della produzione di energia elettrica in tutti i paesi dell’UE?",
-  "subheading": "Nel 2022, nell’UE a 27, l’intensità delle emissioni di gas serra (GHG) in equivalente di anidride carbonica per kilowattora era di 258. Si tratta di un aumento del 13,65% rispetto al 2020.",
+  "heading": "Qual è l'impronta di carbonio della produzione di energia elettrica nell'UE?",
+  "subheading": "Nel 2023, nell'Unione Europea, la quantità di emissioni di gas serra per kilowattora di elettricità prodotta è stata di 210 gCO2e/kWh. Ciò rappresenta una riduzione del 17% rispetto al 2022 (258 gCO2e/kWh).",
   "legend1": "Nessun dato disponibile",
-  "tooltip1": "gCO2e/kW h",
+  "tooltip1": "g CO2e/kWh",
   "textSourceDescription": "Fonte",
-  "textSource": "AEA: https://www.eea.europa.eu/",
+  "textSource": "SEE: https://www.eea.europa.eu/",
   "textNoteDescription": "Nota",
-  "textNote": "Agenzia europea per l'ambiente",
+  "textNote": "Agenzia europea dell'ambiente",
   "textDataAccess": "Accedi ai dati",
   "linkDataAccess": "https://www.eea.europa.eu/en/analysis/indicators/greenhouse-gas-emission-intensity-of-1?activeAccordion=ecdb3bcf-bbe9-4978-b5cf-0b136399d9f8",
-  "textCountryClick": "Fare clic per maggiori informazioni"
+  "textCountryClick": "Clicca per maggiori informazioni"
 }
