--- a/static/languages/lt.json
+++ b/static/languages/lt.json
@@ -1,6 +1,6 @@
 {
-  "heading": "Koks yra elektros energijos gamybos anglies pėdsakas visose ES šalyse?",
-  "subheading": "2022 m. ES-27 šiltnamio efektą sukeliančių dujų (ŠESD) intensyvumas anglies dioksido ekvivalentu kilovatvalandėje buvo 258. Tai yra 13,65% padidėjimas iki 2020 m.",
+  "heading": "Koks yra elektros energijos gamybos ES anglies pėdsakas?",
+  "subheading": "2023 metais Europos Sąjungoje išmetamų šiltnamio efektą sukeliančių dujų kiekis kilovatvalandei pagamintos elektros buvo 210 gCO2e/kWh. Tai reiškia 17 % mažiau nei 2022 m. (258 gCO2e/kWh).",
   "legend1": "Nėra duomenų",
   "tooltip1": "g CO2e/kW val",
   "textSourceDescription": "Šaltinis",
