--- a/static/languages/lv.json
+++ b/static/languages/lv.json
@@ -1,6 +1,6 @@
 {
-  "heading": "Cik liela ir elektroenerģijas ražošanas oglekļa pēda visās ES valstīs?",
-  "subheading": "2022. gadā ES-27 siltumnīcefekta gāzu emisiju (SEG) intensitāte oglekļa dioksīda ekvivalentā uz kilovatstundu bija 258. Tas ir pieaugums par 13,65% līdz 2020. gadam.",
+  "heading": "Kāda ir elektroenerģijas ražošanas oglekļa pēda ES?",
+  "subheading": "2023. gadā Eiropas Savienībā siltumnīcefekta gāzu emisiju apjoms uz vienu saražotās elektroenerģijas kilovatstundu bija 210 gCO2e/kWh. Tas ir par 17% mazāks nekā 2022. gadā (258 gCO2e/kWh).",
   "legend1": "Nav pieejami dati",
   "tooltip1": "g CO2e/kW h",
   "textSourceDescription": "Avots",
