--- a/static/languages/mt.json
+++ b/static/languages/mt.json
@@ -1,7 +1,7 @@
 {
-  "heading": "Kemm hi għolja l-impronta tal-karbonju tal-ġenerazzjoni tal-elettriku fil-pajjiżi kollha tal-UE?",
-  "subheading": "Mill-2022 fl-UE27 l-intensità tal-emissjonijiet tal-gassijiet serra (GHG) fl-ekwivalenti tad-dijossidu tal-karbonju għal kull kilowatt siegħa kienet 258. Din hija żieda ta’ 13.65 % sal-2020.",
-  "legend1": "L-ebda dejta disponibbli",
+  "heading": "X'inhi l-impronta tal-karbonju tal-produzzjoni tal-elettriku fl-UE?",
+  "subheading": "Fl-2023, fl-Unjoni Ewropea, l-ammont ta’ emissjonijiet ta’ gassijiet serra għal kull kilowatt-siegħa ta’ elettriku prodott kien ta’ 210 gCO2e/kWh. Dan jirrappreżenta tnaqqis ta' 17% meta mqabbel mal-2022 (258 gCO2e/kWh).",
+  "legend1": "Ebda data disponibbli",
   "tooltip1": "g CO2e/kW h",
   "textSourceDescription": "Sors",
   "textSource": "ŻEE: https://www.eea.europa.eu/",
