--- a/static/languages/ro.json
+++ b/static/languages/ro.json
@@ -1,11 +1,11 @@
 {
-  "heading": "Cât de mare este amprenta de carbon a producției de electricitate în toate țările UE?",
-  "subheading": "Începând cu 2022, în UE27, intensitatea emisiilor de gaze cu efect de seră (GES) în echivalent dioxid de carbon pe kilowatt oră a fost de 258. Aceasta reprezintă o creștere de 13,65% până în 2020.",
-  "legend1": "Nici o informatie disponibila",
+  "heading": "Care este amprenta de carbon a producției de energie electrică în UE?",
+  "subheading": "În 2023, în Uniunea Europeană, cantitatea de emisii de gaze cu efect de seră pe kilowatt-oră de energie electrică produsă a fost de 210 gCO2e/kWh. Aceasta reprezintă o reducere de 17% față de 2022 (258 gCO2e/kWh).",
+  "legend1": "Nu există date disponibile",
   "tooltip1": "g CO2e/kW h",
   "textSourceDescription": "Sursă",
   "textSource": "SEE: https://www.eea.europa.eu/",
-  "textNoteDescription": "Notă",
+  "textNoteDescription": "Nota",
   "textNote": "Agenția Europeană de Mediu",
   "textDataAccess": "Accesați datele",
   "linkDataAccess": "https://www.eea.europa.eu/en/analysis/indicators/greenhouse-gas-emission-intensity-of-1?activeAccordion=ecdb3bcf-bbe9-4978-b5cf-0b136399d9f8",
