--- a/static/languages/sk.json
+++ b/static/languages/sk.json
@@ -1,6 +1,6 @@
 {
-  "heading": "Aká vysoká je uhlíková stopa výroby elektriny vo všetkých krajinách EÚ?",
-  "subheading": "Od roku 2022 bola intenzita emisií skleníkových plynov (GHG) v ekvivalente oxidu uhličitého na kilowatthodinu 258. Do roku 2020 to predstavuje nárast o 13,65 %.",
+  "heading": "Aká je uhlíková stopa výroby elektriny v EÚ?",
+  "subheading": "V roku 2023 bolo v Európskej únii množstvo emisií skleníkových plynov na kilowatthodinu vyrobenej elektriny 210 gCO2e/kWh. To predstavuje 17 % zníženie v porovnaní s rokom 2022 (258 g CO2e/kWh).",
   "legend1": "Nie sú k dispozícii žiadne údaje",
   "tooltip1": "g CO2e/kW h",
   "textSourceDescription": "Zdroj",
