--- a/static/languages/sl.json
+++ b/static/languages/sl.json
@@ -1,13 +1,13 @@
 {
-  "heading": "Kako visok je ogljični odtis proizvodnje električne energije v vseh državah EU?",
-  "subheading": "Leta 2022 je bila v EU27 intenzivnost emisij toplogrednih plinov (GHG) v ekvivalentu ogljikovega dioksida na kilovatno uro 258. To je 13,65-odstotno povečanje glede na leto 2020.",
-  "legend1": "Podatki niso na voljo",
+  "heading": "Kakšen je ogljični odtis proizvodnje električne energije v EU?",
+  "subheading": "Leta 2023 je v Evropski uniji količina izpustov toplogrednih plinov na kilovatno uro proizvedene električne energije znašala 210 gCO2e/kWh. To predstavlja 17-odstotno zmanjšanje v primerjavi z letom 2022 (258 gCO2e/kWh).",
+  "legend1": "Ni podatkov",
   "tooltip1": "g CO2e/kW h",
   "textSourceDescription": "Vir",
   "textSource": "EGP: https://www.eea.europa.eu/",
   "textNoteDescription": "Opomba",
   "textNote": "Evropska agencija za okolje",
-  "textDataAccess": "Dostopajte do podatkov",
+  "textDataAccess": "Dostop do podatkov",
   "linkDataAccess": "https://www.eea.europa.eu/en/analysis/indicators/greenhouse-gas-emission-intensity-of-1?activeAccordion=ecdb3bcf-bbe9-4978-b5cf-0b136399d9f8",
   "textCountryClick": "Kliknite za več informacij"
 }
